--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -54,3 +54,4 @@
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
+  - [git submodule foreach git pull, Updating submodules]
