--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,17 +1,20 @@
-- shell:
-    - ["mkdir -p ~/.config/fish ~/.zsh ~/.oh-my-zsh/custom/themes", "Checking folder structure exists"]
-
-- clean: ['~', '~/.config/fish', '~/.zsh', '~/.oh-my-zsh/custom/themes']
+- defaults:
+    link:
+      create: true
+      relink: true
+      force: true
+      replace: true
 
 - link:
     ~/.dotfiles: ''
-    ~/.vim: vim/
-    ~/.vimrc: vimrc
     ~/.zsh:
       path: config/zsh/
       replace: true
       force: true
-    ~/.zshrc: config/zsh/zshrc
+    ~/.zshrc: 
+        path: config/zsh/zshrc
+        replace: true
+        force: true
     ~/.zshenv:
       path: config/zsh/zshenv
       force: true
@@ -55,7 +58,10 @@
       path:       bin/
       backup:     ./backup
       replace:    true
+      
+- clean: ['~', '~/.config/fish', '~/.zsh', '~/.oh-my-zsh/custom/themes']
 
 - shell:
+  - ["mkdir -p ~/.config/fish ~/.zsh ~/.oh-my-zsh/custom/themes", "Checking folder structure exists"]
   - [git submodule update --init --recursive, Installing submodules]
-  - [git submodule foreach git pull, Updating submodules]
+  - [git submodule foreach git pull origin master, Updating submodules]
