Update vim configuration
Added vimrc to install.conf.yaml

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -13,6 +13,7 @@
     ~/.bash_profile:      .bash_profile
     ~/.gitconfig:         .gitconfig
     ~/.gitignore_global:  .gitignore_global
+    ~/.vimrc:             .vimrc
     ~/bin:
       path:       bin/
       backup:     ./backup
