--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,6 +14,7 @@
     ~/.gitconfig:         .gitconfig
     ~/.gitignore_global:  .gitignore_global
     ~/.vimrc:             .vimrc
+    ~/.ssh/config:        .ssh_config
     ~/bin:
       path:       bin/
       backup:     ./backup
