--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,7 @@
 [user]
 	name = Asen Lekov
 	email = asenlekoff@gmail.com
+	signingkey = 6C0C9DCD8A46C061
 
 [alias]
   tags = tag -l
@@ -82,3 +83,7 @@
 	clean = git media clean %f
 	smudge = git media smudge %f
   required = true
+[gpg]
+	program = /usr/local/bin/gpg
+[commit]
+	gpgsign = true
