--- a/.gitconfig
+++ b/.gitconfig
@@ -42,7 +42,10 @@
 [core]
 	excludesfile = ~/.gitignore_global
 	editor = vim
-	whitespace = trailing-space,space-before-tab,indent-with-non-tab
+	whitespace=fix,-indent-with-non-tab,trailing-space,cr-at-eol
+
+[apply]
+	whitespace = nowarn
 
 [push]
     default = current
@@ -50,11 +53,31 @@
 [branch]
     autosetuprebase = always
 
+[log]
+  date = relative
+
 [color]
-    branch = auto
-    diff = auto
-    interactive = auto
-    status = auto
+	branch = auto
+	diff = auto
+	status = auto
+  showbranch = auto
+	ui = true
+
+[color "branch"]
+	current = yellow reverse
+	local = yellow
+	remote = green
+
+[color "diff"]
+	meta = yellow bold
+	frag = magenta bold
+	old = red bold
+	new = green bold
+
+[color "status"]
+	added = yellow
+	changed = green
+	untracked = cyan
 
 [credential]
     helper = osxkeychain
@@ -83,7 +106,9 @@
 	clean = git media clean %f
 	smudge = git media smudge %f
   required = true
+
 [gpg]
 	program = /usr/local/bin/gpg
+
 [commit]
 	gpgsign = true
