--- a/.gitconfig
+++ b/.gitconfig
@@ -28,7 +28,8 @@
 
   unstage = reset HEAD
   untrack = rm --cached
-  unt = rm --cached
+
+	forget = !git ls-files --ignored --exclude-standard -z | xargs -0 git rm --cached
 
   l = log -18 --color=always --all --topo-order --pretty='format:%Cgreen%h%Creset %s%Cred%d%Creset %C(black bold)(by %an)%Creset'
   ll = log --color=always --all --topo-order --pretty='format:%Cgreen%h%Creset %s%Cred%d%Creset %C(black bold)(by %an)%Creset'
@@ -36,7 +37,7 @@
   gll = log --color=always --all --graph --topo-order --pretty='format:%Cgreen%h%Creset %s %C(black bold)(%cr by %an)%Creset%C(yellow bold)%d%Creset%n'
 
   alias = !git config --list | grep 'alias\\.' | sed 's/alias\\.\\([^=]*\\)=\\(.*\\)/\\1\t=> \\2/' | sort
-	ignore = "!gi() { curl -L -s https://www.gitignore.io/api/$@ ;}; gi"
+	ignore = "!gi() { curl -L -s https://www.gitignore.io/api/$@ > .gitignore ;}; gi"
 
   squash = "!squash() { git rebase --interactive --autosquash HEAD~$@ ;}; squash"
 [core]
@@ -112,3 +113,10 @@
 
 [commit]
 	gpgsign = true
+	template = /Users/lekov/.stCommitMsg
+[difftool "sourcetree"]
+	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+	path = 
+[mergetool "sourcetree"]
+	cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	trustExitCode = true
