--- a/.gitconfig
+++ b/.gitconfig
@@ -113,10 +113,6 @@
 
 [commit]
 	gpgsign = true
-	template = /Users/lekov/.stCommitMsg
-[difftool "sourcetree"]
-	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
-	path = 
-[mergetool "sourcetree"]
-	cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
-	trustExitCode = true
+
+[pull]
+	rebase = true
