--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -30,3 +30,4 @@
   - [git submodule update --init --recursive, Installing submodules...]
   - [git submodule foreach git pull origin master, Updating submodules...]
   - ["cp -irf assets/fonts/*.ttf ~/Library/Fonts", "Copy fonts..."]
+  - [antigen reset && antigen update, Configure and update antigen]
