--- a/.gitconfig
+++ b/.gitconfig
@@ -29,7 +29,7 @@
   unstage = reset HEAD
   untrack = rm --cached
 
-	forget = !git ls-files --ignored --exclude-standard -z | xargs -0 git rm --cached
+  forget = !git ls-files --ignored --exclude-standard -z | xargs -0 git rm --cached
 
   l = log -18 --color=always --all --topo-order --pretty='format:%Cgreen%h%Creset %s%Cred%d%Creset %C(black bold)(by %an)%Creset'
   ll = log --color=always --all --topo-order --pretty='format:%Cgreen%h%Creset %s%Cred%d%Creset %C(black bold)(by %an)%Creset'
@@ -37,13 +37,14 @@
   gll = log --color=always --all --graph --topo-order --pretty='format:%Cgreen%h%Creset %s %C(black bold)(%cr by %an)%Creset%C(yellow bold)%d%Creset%n'
 
   alias = !git config --list | grep 'alias\\.' | sed 's/alias\\.\\([^=]*\\)=\\(.*\\)/\\1\t=> \\2/' | sort
-	ignore = "!gi() { curl -L -s https://www.gitignore.io/api/$@ > .gitignore ;}; gi"
-
   squash = "!squash() { git rebase --interactive --autosquash HEAD~$@ ;}; squash"
+
+  lightsup = config user.email "asen.lekov@lights.digital"
 [core]
 	excludesfile = ~/.gitignore_global
 	editor = vim
 	whitespace=fix,-indent-with-non-tab,trailing-space,cr-at-eol
+	pager = diff-so-fancy | less --tabs=4 -RFX
 
 [apply]
 	whitespace = nowarn
@@ -61,7 +62,7 @@
 	branch = auto
 	diff = auto
 	status = auto
-  showbranch = auto
+    showbranch = auto
 	ui = true
 
 [color "branch"]
@@ -106,7 +107,7 @@
 [filter "media"]
 	clean = git media clean %f
 	smudge = git media smudge %f
-  required = true
+    required = true
 
 [gpg]
 	program = /usr/local/bin/gpg
@@ -122,3 +123,7 @@
 [mergetool "sourcetree"]
 	cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
+[merge]
+	tool = vscode
+[mergetool "vscode"]
+	cmd = "code --wait "
