--- a/.gitconfig
+++ b/.gitconfig
@@ -37,7 +37,7 @@
   gll = log --color=always --all --graph --topo-order --pretty='format:%Cgreen%h%Creset %s %C(black bold)(%cr by %an)%Creset%C(yellow bold)%d%Creset%n'
 
   alias = !git config --list | grep 'alias\\.' | sed 's/alias\\.\\([^=]*\\)=\\(.*\\)/\\1\t=> \\2/' | sort
-  squash = "!squash() { git rebase --interactive --autosquash HEAD~$@ ;}; squash"
+  squash = !git rebase --interactive --autosquash HEAD~$@
 
   lightsup = config user.email "asen.lekov@lights.digital"
 [core]
